--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.adp.loadercustom"
-    android:versionCode="1"
+    android:versionCode="2"
     android:versionName="1.0" >
 
     <uses-sdk
@@ -15,9 +15,15 @@
         android:theme="@style/AppTheme"
         tools:ignore="HardcodedDebugMode" >
         <activity
-            android:name="com.adp.applistloader.MainActivity"
-            android:label="@string/activity_title" 
-            android:configChanges="locale" >
+            android:name=".MainActivity"
+            android:configChanges="locale"
+            android:label="@string/activity_title" >
+            <!--
+            We use "configChanges="locale" to prevent the system from destroying
+            and recreating the activity on locale changes. Instead, the
+            SystemLocaleObserver will intercept system-wide locale changes and
+            will notify the Loader to force a new load whenever this occurs.
+            -->
             <intent-filter android:label="@string/app_name" >
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
